# CloudCompare

./: .gitignore  CMakeLists.txt
ccViewer/: ccViewerApplication.cpp  ccviewer.cpp  main.cpp
plugins/core/IO/qDracoIO/: CMakeLists.txt
plugins/core/IO/qDracoIO/src/: DRCFilter.cpp  SaveDracoFileDlg.cpp  qDracoIO.cpp
qCC/: CMakeLists.txt  cc2.5DimEditor.cpp  cc2.5DimEditor.h  ccAboutDialog.cpp  ccAdjustZoomDlg.cpp  ccAlignDlg.cpp  ccApplication.cpp  ccApplyTransformationDlg.cpp  ccAskThreeDoubleValuesDlg.cpp  ccAskTwoDoubleValuesDlg.cpp  ccBoundingBoxEditorDlg.cpp  ccCamSensorProjectionDlg.cpp  ccClippingBoxRepeatDlg.cpp  ccClippingBoxTool.cpp  ccColorFromScalarDlg.cpp  ccColorGradientDlg.cpp  ccColorLevelsDlg.cpp  ccCommandRaster.cpp  ccComparisonDlg.cpp  ccComputeOctreeDlg.cpp  ccConsole.cpp  ccContourLinesGenerator.cpp  ccCropTool.cpp  ccEntityAction.cpp  ccEntitySelectionDlg.cpp  ccEnvelopeExtractor.cpp  ccEnvelopeExtractorDlg.cpp  ccExportCoordToSFDlg.cpp  ccFilterByValueDlg.cpp  ccGBLSensorProjectionDlg.cpp  ccGeomFeaturesDlg.cpp  ccGraphicalSegmentationOptionsDlg.cpp  ccGraphicalSegmentationTool.cpp  ccGraphicalTransformationTool.cpp  ccHistogramWindow.cpp  ccInnerRect2DFinder.cpp  ccInterpolationDlg.cpp  ccItemSelectionDlg.cpp  ccKrigingParamsDialog.cpp  ccLabelingDlg.cpp  (+43 more)
qCC/db_tree/: ccDBRoot.cpp  ccPropertiesTreeDelegate.cpp  matrixDisplayDlg.cpp  sfEditDlg.cpp
qCC/pluginManager/: ccPluginInfoDlg.cpp  ccPluginUIManager.cpp
qCC/ui_templates/: mainWindow.ui  mainWindow.ui.autosave  terrainModelDlg.ui  tracePolylineDlg.ui  tracePolylineDlg.ui.autosave  (+2 more)
(+285 files in other folders)
